src/test/deca/context/invalid/ParamTypeNotDefined.deca
Class A{
  void f(randomtype x){

  }
}
